POM: Add --add-opens flag to Surefire and Failsafe executions.
Change-Id: I7e9f75693e79bf3ea8f756414e65815b5ab9dd6d